jenkins/jenkins-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - host: jenkins.5ik8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
